--- a/src/main/resources/templates/layouts/main.html
+++ b/src/main/resources/templates/layouts/main.html
@@ -14,6 +14,7 @@
             using the layout also defines a layout:fragment="content" segment.</p>
     </div>
 </div>
+<script th:src="@{/js/language-select.js}"></script>
 <script th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
 </body>
 </html>
