--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -6,20 +6,20 @@
       layout:decorate="~{layouts/main}">
 <head>
     <meta charset="UTF-8">
-    <title>Log in</title>
+    <title>Sign in</title>
 </head>
 <body>
 <div>
     <div layout:fragment="content" class="w-50 bg-light mx-auto">
         <form th:action="@{/login}" th:method="POST">
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-            <label for="email-in">Username: </label>
+            <label for="email-in"><span th:text="#{login.email}"></span>: </label>
             <input type="text" name="email" id="email-in">
             <br>
-            <label for="password-in">Password: </label>
+            <label for="password-in"><span th:text="#{login.password}"></span>: </label>
             <input type="password" name="password" id="password-in">
             <br>
-            <input type="submit" value="Log in!">
+            <button type="submit"><span th:text="#{login.logIn}"></span></button>
         </form>
     </div>
 </div>
