--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -8,7 +8,7 @@
 <div>
     <h3>Hello, <span th:text="${user.name}">bro</span>!</h3>
     <form th:action="@{/logout}" th:method="POST">
-        <input type="submit" value="Logout">
+        <button type="submit" th:text="#{user.logOut}"></button>
     </form>
 </div>
 </body>
