--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -10,16 +10,26 @@
 </head>
 <body>
 <div>
-    <div layout:fragment="content" class="w-50 bg-light mx-auto">
-        <form th:action="@{/login}" th:method="POST">
+    <div layout:fragment="content" class="row">
+        <form th:action="@{/login}" th:method="POST" class="col-lg-6 col-md-8 mx-auto p-4 shadow">
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-            <label for="email-in"><span th:text="#{login.email}"></span>: </label>
-            <input type="text" name="email" id="email-in">
-            <br>
-            <label for="password-in"><span th:text="#{login.password}"></span>: </label>
-            <input type="password" name="password" id="password-in">
-            <br>
-            <button type="submit"><span th:text="#{login.logIn}"></span></button>
+            <div class="mb-3 row">
+                <label for="emailIn" class="col-sm-2 col-form-label"><span th:text="#{login.email}"></span>:</label>
+                <div class="col-sm-10">
+                    <input type="text" name="email" class="form-control" id="emailIn">
+                </div>
+            </div>
+            <div class="mb-3 row">
+                <label for="passwordIn" class="col-sm-2 col-form-label"><span th:text="#{login.password}"></span>:</label>
+                <div class="col-sm-10">
+                    <input type="password" name="password" class="form-control" id="passwordIn">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4 ms-auto">
+                    <button type="submit" class="btn btn-primary w-100"><span th:text="#{login.logIn}"></span>!</button>
+                </div>
+            </div>
         </form>
     </div>
 </div>
