--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -10,27 +10,34 @@
 </head>
 <body>
 <div>
-    <div layout:fragment="content" class="row">
-        <form th:action="@{/login}" th:method="POST" class="col-lg-6 col-md-8 mx-auto p-4 shadow">
-            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-            <div class="mb-3 row">
-                <label for="emailIn" class="col-sm-2 col-form-label"><span th:text="#{login.email}"></span>:</label>
-                <div class="col-sm-10">
-                    <input type="text" name="email" class="form-control" id="emailIn">
-                </div>
+    <div layout:fragment="content">
+        <div class="row">
+            <div class="alert alert-danger col-lg-6 col-md-8 mx-auto" role="alert" th:if="${param.error}">
+                <span th:text="#{login.error}"></span>
             </div>
-            <div class="mb-3 row">
-                <label for="passwordIn" class="col-sm-2 col-form-label"><span th:text="#{login.password}"></span>:</label>
-                <div class="col-sm-10">
-                    <input type="password" name="password" class="form-control" id="passwordIn">
+        </div>
+        <div class="row">
+            <form th:action="@{/login}" th:method="POST" class="col-lg-6 col-md-8 mx-auto p-4 shadow">
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                <div class="mb-3 row">
+                    <label for="emailIn" class="col-sm-2 col-form-label"><span th:text="#{login.email}"></span>:</label>
+                    <div class="col-sm-10">
+                        <input type="text" name="email" class="form-control" id="emailIn">
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-4 ms-auto">
-                    <button type="submit" class="btn btn-primary w-100"><span th:text="#{login.logIn}"></span>!</button>
+                <div class="mb-3 row">
+                    <label for="passwordIn" class="col-sm-2 col-form-label"><span th:text="#{login.password}"></span>:</label>
+                    <div class="col-sm-10">
+                        <input type="password" name="password" class="form-control" id="passwordIn">
+                    </div>
                 </div>
-            </div>
-        </form>
+                <div class="row">
+                    <div class="col-sm-4 ms-auto">
+                        <button type="submit" class="btn btn-primary w-100"><span th:text="#{login.logIn}"></span>!</button>
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 </body>
