--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,7 +1,9 @@
-<header th:fragment="header" class="navbar navbar-expand-md bg-dark navbar-dark">
+<header th:fragment="header"
+        xmlns:th="http://www.thymeleaf.org"
+        xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6"
+        class="navbar navbar-expand-md bg-dark navbar-dark">
     <div class="container">
         <a href="#" class="navbar-brand">Self Improvement</a>
-
         <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -13,16 +15,27 @@
                 <li class="nav-item">
                     <a href="#" class="nav-link">News</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" id="navbarScrollingDropdown" role="button"
-                       data-bs-toggle="dropdown" aria-expanded="false">Username</a>
+
+                <!-- Logged in -->
+                <li sec:authorize="isAuthenticated()" class="nav-item dropdown">
+                    <a sec:authentication="name" href="#" class="nav-link dropdown-toggle" id="navbarScrollingDropdown"
+                       role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
                     <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
                         <li><a href="#" class="dropdown-item">Activities</a></li>
                         <li><a href="#" class="dropdown-item">Dashboard</a></li>
-                        <hr class="dropdown-divider">
-                        <li><a href="#" class="dropdown-item">Log out</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li>
+                            <form th:action="@{/logout}" th:method="POST">
+                                <button type="submit" th:text="#{user.logOut}" class="dropdown-item"></button>
+                            </form>
+                        </li>
                     </ul>
                 </li>
+                <!-- Unauthorized -->
+                <li sec:authorize="isAnonymous()" class="nav-item">
+                    <a href="#" th:text="#{login.logIn}" class="nav-link"></a>
+                </li>
+
                 <li class="nav-item my-auto">
                     <select name="lang" id="localeSelect" class="form-select form-select-sm"
                             aria-label="language" onchange="handleLanguageSelectChange()">
