--- a/src/main/resources/templates/users/new.html
+++ b/src/main/resources/templates/users/new.html
@@ -13,47 +13,56 @@
             <form th:action="@{/users}" th:method="POST" th:object="${user}"
                   class="col-lg-6 col-md-8 mx-auto p-4 shadow needs-validation">
                 <div class="mb-3 row">
-                    <label for="emailIn" class="col-sm-2 col-form-label"><span th:text="#{user.email}"></span>:</label>
-                    <div th:with="isInvalid = ${#fields.hasErrors('email')}" class="col-sm-10 has-validation">
+                    <label for="emailIn" class="col-lg-3 col-md-4 col-sm-5 col-form-label"><span th:text="#{user.email}"></span>:</label>
+                    <div th:with="isInvalid = ${#fields.hasErrors('email')}" class="col has-validation">
                         <input type="text" th:field="*{email}" id="emailIn" class="form-control"
                                th:classappend="${isInvalid ? 'is-invalid' : ''}">
                         <div th:if="${isInvalid}" th:errors="*{email}" class="invalid-feedback"></div>
                     </div>
                 </div>
                 <div class="mb-3 row">
-                    <label for="passwordIn" class="col-sm-2 col-form-label"><span th:text="#{user.password}"></span>:</label>
-                    <div th:with="isInvalid = ${#fields.hasErrors('password')}" class="col-sm-10">
+                    <label for="passwordIn" class="col-lg-3 col-md-4 col-sm-5 col-form-label"><span th:text="#{user.password}"></span>:</label>
+                    <div th:with="isInvalid = ${#fields.hasErrors('password')}" class="col">
                         <input type="password" th:field="*{password}" class="form-control" id="passwordIn"
                                th:classappend="${isInvalid ? 'is-invalid' : ''}">
                         <div th:if="${isInvalid}" th:errors="*{password}" class="invalid-feedback"></div>
                     </div>
                 </div>
                 <div class="mb-3 row">
-                    <label for="nameIn" class="col-sm-2 col-form-label"><span th:text="#{user.name}"></span>:</label>
-                    <div th:with="isInvalid = ${#fields.hasErrors('name')}" class="col-sm-10">
+                    <label for="passwordRepeatIn"
+                           class="col-lg-3 col-md-4 col-sm-5 col-form-label"><span th:text="#{user.repeatPassword}"></span>:</label>
+                    <div th:with="isInvalid = ${#fields.hasErrors('repeatedPassword')}" class="col">
+                        <input type="password" th:field="*{repeatedPassword}" class="form-control" id="passwordRepeatIn"
+                               th:classappend="${isInvalid ? 'is-invalid' : ''}">
+                        <div th:if="${isInvalid}" th:errors="*{repeatedPassword}" class="invalid-feedback"></div>
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label for="nameIn" class="col-lg-3 col-md-4 col-sm-5 col-form-label"><span th:text="#{user.name}"></span>:</label>
+                    <div th:with="isInvalid = ${#fields.hasErrors('name')}" class="col">
                         <input type="text" th:field="*{name}" class="form-control" id="nameIn"
                                th:classappend="${isInvalid ? 'is-invalid' : ''}">
                         <div th:if="${isInvalid}" th:errors="*{name}" class="invalid-feedback"></div>
                     </div>
                 </div>
                 <div class="mb-3 row">
-                    <label for="surnameIn" class="col-sm-2 col-form-label"><span th:text="#{user.surname}"></span>:</label>
-                    <div th:with="isInvalid = ${#fields.hasErrors('surname')}" class="col-sm-10">
+                    <label for="surnameIn" class="col-lg-3 col-md-4 col-sm-5 col-form-label"><span th:text="#{user.surname}"></span>:</label>
+                    <div th:with="isInvalid = ${#fields.hasErrors('surname')}" class="col">
                         <input type="text" th:field="*{surname}" class="form-control" id="surnameIn"
                                th:classappend="${isInvalid ? 'is-invalid' : ''}">
                         <div th:if="${isInvalid}" th:errors="*{surname}" class="invalid-feedback"></div>
                     </div>
                 </div>
                 <div class="mb-3 row">
-                    <label for="birthdayIn" class="col-sm-2 col-form-label"><span th:text="#{user.birthday}"></span>:</label>
-                    <div th:with="isInvalid = ${#fields.hasErrors('birthday')}" class="col-sm-10">
+                    <label for="birthdayIn" class="col-lg-3 col-md-4 col-sm-5 col-form-label"><span th:text="#{user.birthday}"></span>:</label>
+                    <div th:with="isInvalid = ${#fields.hasErrors('birthday')}" class="col">
                         <input type="date" th:field="*{birthday}" class="form-control" id="birthdayIn"
                                th:classappend="${isInvalid ? 'is-invalid' : ''}">
                         <div th:if="${isInvalid}" th:errors="*{birthday}" class="invalid-feedback"></div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-4 ms-auto">
+                    <div class="col-lg-3 col-md-4 col-sm-5 ms-auto">
                         <button type="submit" class="btn btn-primary w-100"><span th:text="#{signup.signUp}"></span>!</button>
                     </div>
                 </div>
